removed todo & fixed a header font on firefox

--- a/frontend/src/assets/styles/cmps/app-header/_filter-expanded.scss
+++ b/frontend/src/assets/styles/cmps/app-header/_filter-expanded.scss
@@ -74,6 +74,7 @@
                         &:first-child {
                             letter-spacing: 0.48px;
                             padding-block-end: 2px;
+                            font-weight: 400;
                         }
 
                         &:last-child {
